--- a/index.html
+++ b/index.html
@@ -55,10 +55,11 @@
         </table> -->
     </div>
 
-    <script src="https://lex-web-ui-codebuilddeploy-ttai7e0k2-webappbucket-nrzg9xlm3am4.s3.amazonaws.com/lex-web-ui-loader.min.js"></script>
+<!-- PUT YOUR LEX BUCKET URL HERE!!! -->
+    <script src="https://<<LEX-BUCKET-NAME>>.s3.amazonaws.com/lex-web-ui-loader.min.js"></script>
 <script>
   var loaderOpts = {
-    baseUrl: 'https://lex-web-ui-codebuilddeploy-ttai7e0k2-webappbucket-nrzg9xlm3am4.s3.amazonaws.com/'
+    baseUrl: 'https://<<LEX-BUCKET-NAME>>.s3.amazonaws.com/'
   };
   var loader = new ChatBotUiLoader.IframeLoader(loaderOpts);
   loader.load()
